<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourActivity"
    tools:ignore="MissingClass">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3252a8"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/essentias_of_developing_android_5_0"
        android:textColor="@color/white"
        android:textSize="23sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/enter_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="#FF3FA4"
        android:hint="@string/enter_your_name"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints,TextFields"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/enter_your_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF3FA4"
        android:hint="@string/enter_your_phone_number"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints,TextFields"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/orderingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_ordering"
        android:textColor="#80000000"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="237dp" />

    <TextView
        android:id="@+id/order_text"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="#F8F0E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderingText" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="504dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/place_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sms_place_your_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
