<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/essentias_of_developing_android_5_0"
        android:padding="15dp"
        android:background="#3252a8"
        android:textColor="@color/white"
        android:textSize="23"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
        android:id="@+id/enter_your_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="#FF3FA4"
        android:hint="@string/enter_your_name"
        android:minHeight="48dp"
        tools:ignore="TextFields"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/enter_your_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF3FA4"
        android:hint="@string/enter_your_phone_number"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="TextFields"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/tasteRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        tools:ignore="MissingConstraints">

    </RadioGroup>

    <RadioGroup
        android:id="@+id/shapeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tasteRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </RadioGroup>

    <LinearLayout
        android:id="@+id/toppingsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/shapeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/orderingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:text="@string/your_ordering"
        android:textColor="#80000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppingsLayout" />

    <TextView
        android:id="@+id/order_text"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:background="#F8F0E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderingText" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_text" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/order_text"
        app:layout_constraintStart_toEndOf="@+id/exitButton"
        app:layout_constraintEnd_toStartOf="@+id/place_order"/>

    <Button
        android:id="@+id/place_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:text="@string/sms_place_your_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_text" />

    <CheckBox
        android:id="@+id/pepperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="Pepperoni"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="253dp" />

    <CheckBox
        android:id="@+id/mushroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="Mushroom"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="253dp" />

    <CheckBox
        android:id="@+id/veggies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="Veggies"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="253dp" />

    <RadioButton
        android:id="@+id/none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="None"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="164dp" />

    <RadioButton
        android:id="@+id/cheese_x_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="2 x Cheese"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="164dp" />

    <RadioButton
        android:id="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="Square"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="210dp" />

    <RadioButton
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="Round"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="210dp" />

    <RadioButton
        android:id="@+id/cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FF3FA4"
        android:text="Cheese"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="164dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

